<resources>
    <string name="app_name">Administracion Sucursales</string>
    <string name="activity_title_administracion">Administración</string>
    <string name="activity_title_add_sucursal">Registrar Sucursal</string>
    <string name="activity_title_edit_sucursal">Editar Sucursal</string>
    <string name="activity_title_detalle_sucursal">Detalle Sucursal</string>
    <string name="activity_title_add_empleado">Registrar Empleado</string>
    <string name="activity_title_edit_empleado">Editar Empleado</string>
    <string name="activity_title_login">Iniciar sesión</string>
    <string name="activity_title_add_usuario">Crear cuenta</string>
    <string name="sucursal_nombre">Nombre</string>
    <string name="sucursal_calle">Calle</string>
    <string name="sucursal_colonia">Colonia</string>
    <string name="sucursal_numero">Número</string>
    <string name="sucursal_codigo_postal">Código Postal</string>
    <string name="sucursal_ciudad">Ciudad</string>
    <string name="sucursal_pais">País</string>
    <string name="error_campo_obligatorio">Este campo es obligatorio.</string>
    <string name="error_rfc_invalido">RFC inválido.</string>
    <string name="error_email_invalido">Email inválido.</string>
    <string name="num_empleados">Núm. de empleados: %1$s</string>
    <string name="drawer_inicio">Inicio</string>
    <string name="drawer_add_sucursal">Registrar sucursal</string>
    <string name="drawer_add_empleado">Registrar empleado</string>
    <string name="drawer_logout">Cerrar Sesión</string>

    <string name="empleado_nombre">Nombre</string>
    <string name="empleado_rfc">RFC</string>
    <string name="empleado_sucursal">Sucursal</string>
    <string name="empleado_puesto">Puesto</string>
    <string name="usuario_nombre">Nombre</string>
    <string name="usuario_email">Email</string>
    <string name="usuario_rfc">RFC</string>
    <string name="usuario_empresa">Empresa</string>
    <string name="usuario_password">Password</string>
    <string name="usuario_password_confirmacion">Confirmación del password</string>

    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_login_crear">¿Ya tienes una cuenta? <u>Iniciar sesión</u></string>
    <string name="btn_crear">Crear cuenta</string>
    <string name="btn_crear_login">¿No tienes una cuenta? <u>Crear cuenta</u></string>
    <string name="error_login">El email o password son incorrectos.</string>
    <string name="error_crear">Ya existe un usuario registrado con este email.</string>
    <string name="error_password_no_coincide">La confirmación del password no coincide.</string>

    <string name="sucursal_direccion">%1$s No. %2$s, %3$s. C.P %4$s</string>
    <string name="sucursal_direccion_ciudad">%1$s, %2$s</string>
    <string name="navigation_drawer_open">Abir drawer</string>
    <string name="navigation_drawer_close">Cerrar drawer</string>
</resources>
