<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddUsuarioActivity">

    <data>
        <variable name="viewModel" type="prj.ccalvario.administracionsucursales.viewmodel.UsuarioViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/input_horizontal_margin"
            android:layout_marginRight="@dimen/input_horizontal_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_addusuario_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                app:passwordToggleDrawable="@drawable/ic_menu"
                app:error="@{viewModel.errorNombre}">

                <EditText
                    android:id="@+id/editText_addusuario_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_nombre"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.nombre}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_addusuario_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                app:passwordToggleDrawable="@drawable/ic_menu"
                app:error="@{viewModel.errorEmail}">

                <EditText
                    android:id="@+id/editText_addusuario_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={viewModel.email}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_addusuario_rfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                app:passwordToggleDrawable="@drawable/ic_menu"
                app:error="@{viewModel.errorRfc}">

                <EditText
                    android:id="@+id/editText_addusuario_rfc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_rfc"
                    android:inputType="textPersonName|textCapCharacters"
                    android:maxLines="1"
                    android:text="@={viewModel.rfc}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_addusuario_empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                app:passwordToggleDrawable="@drawable/ic_menu"
                app:error="@{viewModel.errorEmpresa}">

                <EditText
                    android:id="@+id/editText_addusuario_empresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_empresa"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.empresa}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                app:passwordToggleDrawable="@drawable/ic_menu"
                app:error="@{viewModel.errorPassword}">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={viewModel.password}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_password_confirmacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                app:passwordToggleDrawable="@drawable/ic_menu"
                app:error="@{viewModel.errorPasswordConfirmacion}">

                <EditText
                    android:id="@+id/editText_password_confirmacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_password_confirmacion"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={viewModel.passwordConfirmacion}" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView_crear_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                android:layout_marginBottom="@dimen/item_vertical_margin"
                android:layout_marginLeft="8dp"
                android:textColor="@color/mensaje_error"
                style="@style/TextAppearance.AppCompat.Caption"
                android:text="@={viewModel.errorCrear}" />

            <Button
                android:id="@+id/btn_crear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                android:text="@string/btn_crear" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/btn_login_crear" />

        </LinearLayout>
    </ScrollView>


</layout>