<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoginActivity">

    <data>
        <variable name="viewModel" type="prj.ccalvario.administracionsucursales.viewmodel.LoginViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="@dimen/input_horizontal_margin"
            android:layout_marginRight="@dimen/input_horizontal_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                app:passwordToggleDrawable="@drawable/ic_menu"
                app:error="@{viewModel.errorEmail}">

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={viewModel.email}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                app:passwordToggleDrawable="@drawable/ic_menu"
                app:error="@{viewModel.errorPassword}">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={viewModel.password}" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView_login_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                android:layout_marginBottom="@dimen/item_vertical_margin"
                android:layout_marginLeft="8dp"
                android:textColor="@color/mensaje_error"
                style="@style/TextAppearance.AppCompat.Caption"
                android:text="@={viewModel.errorLogin}" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_vertical_margin"
                android:text="@string/btn_login" />

            <TextView
                android:id="@+id/btn_crear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/btn_crear_login" />

        </LinearLayout>
    </ScrollView>


</layout>