<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddSucursalActivity">

    <data>
        <variable name="viewModel" type="prj.ccalvario.administracionsucursales.viewmodel.SucursalViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:error="@{viewModel.errorNombre}">

                <EditText
                    android:id="@+id/editText_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sucursal_nombre"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.nombre}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_nombre"
                app:error="@{viewModel.errorCalle}">

                <EditText
                    android:id="@+id/editText_calle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sucursal_calle"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.calle}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_colonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_calle"
                app:error="@{viewModel.errorColonia}">

                <EditText
                    android:id="@+id/editText_colonia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sucursal_colonia"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.colonia}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_colonia"
                app:error="@{viewModel.errorNumero}">

                <EditText
                    android:id="@+id/editText_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sucursal_numero"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@={viewModel.numero}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_codigoPostal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_numero"
                app:error="@{viewModel.errorCodigoPostal}">

                <EditText
                    android:id="@+id/editText_codigoPostal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sucursal_codigo_postal"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@={viewModel.codigoPostal}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_codigoPostal"
                app:error="@{viewModel.errorCiudad}">

                <EditText
                    android:id="@+id/editText_ciudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sucursal_ciudad"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.ciudad}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_ciudad"
                app:error="@{viewModel.errorPais}">

                <EditText
                    android:id="@+id/editText_pais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sucursal_pais"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.pais}" />
            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>