<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddSucursalActivity">

    <data>
        <variable name="viewModel" type="prj.ccalvario.administracionsucursales.viewmodel.EmpleadoViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:error="@{viewModel.errorNombre}">

                <EditText
                    android:id="@+id/editText_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/empleado_nombre"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.empleado.nombre}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_rfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_nombre"
                app:error="@{viewModel.errorRfc}">

                <EditText
                    android:id="@+id/editText_rfc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/empleado_rfc"
                    android:inputType="textPersonName|textCapCharacters"
                    android:maxLines="1"
                    android:text="@={viewModel.empleado.rfc}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_sucursalId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_rfc"
                app:error="@{viewModel.errorSucursalId}">

                <EditText
                    android:id="@+id/editText_sucursalId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/empleado_sucursal"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.empleado.sucursalId}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_puesto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_sucursalId"
                app:error="@{viewModel.errorPuesto}">

                <EditText
                    android:id="@+id/editText_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/empleado_puesto"
                    android:inputType="textPersonName|textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.empleado.puesto}" />
            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>